NXT-1646: Generalize workflow annotation z-order manipulation
* Update methods to return success state
* Introduce new methods to enable z-order manipulation undo

NXT-1646 (Gateway API: Arrange workflow annotations on z-level)